# garu

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json  requirements.txt
bench/: index.html
crates/garu-core/: Cargo.toml
crates/garu-core/examples/: analyze_batch.rs  dump_arcs.rs  oracle_eval.rs
crates/garu-core/src/: cnn.rs  codebook.rs  crf.rs  jamo.rs  lib.rs  lstm.rs  model.rs  nng_hints.rs  syllable.rs  trie.rs  types.rs
crates/garu-core/tests/: integration_test.rs  jamo_normalize.rs
docs/: paper-1.html  paper.md
docs/claude/: model-build.md  (+4 more)
js/: .npmignore  CHANGELOG.md  README.md  package-lock.json  package.json
models/: base.gmdl  codebook.gmdl
training/: add_manual_bigrams.py  analyze_eojeol_cache.py  baseline_f1.txt  bench_garu.mjs  bench_speed.py  build_codebook_model.py  build_context_bigrams.py  build_eojeol_cache.py  build_wiki_dict.py  check_neither_words.py  codebook_analyzer.py  dict_expansion_log.tsv  dict_expansion_log.tsv.baseline  error_analysis.py  eval_codebook.py  eval_f1_by_domain.py  eval_f1_garu_only.py  eval_nikl_garu_only.py  eval_nikl_mp.py  eval_nikl_mp_v2.py  eval_problem_cases.py  eval_trimmed_cache.py  evaluate.py  export.py  extract_codebook.py  extract_guuh_overseg_candidates.py  extract_nikl_codebook.py  find_missing_verb_stems.py  find_temp_compound_candidates.py  generate_data.py  locate_temp_compound_sources.py  model.py  patch_cache_add_candidates.py  postA_nonorm_f1.txt  postB_f1.txt  postB_nonorm_f1.txt  postC_f1.txt  postC_nonorm_f1.txt  postD_f1.txt  postNeither_norm.txt  (+32 more)
(+119 files in other folders)
