[package]
name = "garu-core"
version = "0.9.1"
edition = "2021"

[dependencies]
fst = "0.4"
brotli-decompressor = { version = "5", default-features = false, features = ["std", "disable-timer"] }

[dev-dependencies]
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
